--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,11 +1,16 @@
+.app {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .app-container {
     display: flex;
     justify-content: center;
-    /* border: 1px solid white; */
+    // border: 1px solid white;
     margin: 0 100px;
     max-width: 1440px;
     height: auto;
-    
     background-color: transparent;
 }
 
